fix blog system with seo scoor sys

--- a/報價單/報價單需求.md
+++ b/報價單/報價單需求.md
@@ -1,9 +1,9 @@
 1. 輪播頁面(admin可自定義)
 2. 保單鑑診 (admin 可以自定義(包含圖片)) cloudinary service
-3. 表單 回傳 amin (自定義可刪除)
-4. 文章 (閱讀時間移除) 
+3. 表單 回傳 admin (自定義可刪除)
+4. 文章 (閱讀時間可admin自定義是否顯示) 
 5. 富文本編輯器 圖片上傳 (圖片大小UI調整)
-6. 客製化保障和1 對1諮詢對調
+6. 客製化保障和1 對1諮詢對調x
 7. seo 服務 (函數) sitemap , insight ,robot.txt , search console 
 8. 網域http://baojiajia.org (送SSL證書) service@baojiajia.org email 
 服務題共商: 服務提供商
