feat: fix policy-checkup sorting, add download limit to member manager, update analysis logic

--- a/問卷邏輯.md
+++ b/問卷邏輯.md
@@ -1,3 +1,65 @@
+病房選擇=每日病房限額
+假設孩子因疾病或意外需要住院，您希望是哪一種格局的病房呢？
+如果選4-6人健保病房，則為0元 
+若選擇雙人病房，則為3000元 
+若選擇單人病房，則為5000元 
+{{roomcost}} = “0 or 3000 or 5000”
+
+住院日額補償＝每日薪資補償
+孩子住院時，往往是父母陪同住院伴隨薪資損失，您希望住院時獲得多少的薪資補償？
+輸入多少就是多少。
+{{hospitalDaily}} = “input”
+
+手術醫療補貼＝住院雜費開銷
+隨著醫療技術、儀器、材料的進步，自費醫療的需求增加，您希望在需要時獲得多少比例的補貼？
+依據選項顯示10~20、20~30、30~40
+{{surgeryRange}} =” 10~20 or20~30 or 30~40”
+門診開銷固定數值 “5~10”
+{{outpatientSurgeryRange}} = “5~10”
+ 
+薪資損失補償＝休養時薪資損失
+當罹患癌症，難以一邊工作，一邊治療，若需要休養一年無法工作，您的薪資損失是多少？
+一開始他的月薪寫50000，則為60萬。
+(幼童版本因為一開始沒有寫月薪，就從60萬開始，讓客戶自己調整數值)
+{{monthlyIncomeInTenThousand}}*12={{salaryLossInTenThousand}}
+
+每月生活開銷＝休養時日常開銷
+當罹患癌症，若需要休養一年無法工作，您每個月的生活開銷是多少？
+輸入40000，則為48萬
+“input” = {{livingExpenseInTenThousand}}*12
+
+治療費用補償＝罹癌給付⼀次⾦
+隨著癌症用藥日新月異，想要使用新的藥品、技術治療，大多數需要自費，您期望得到多少補償？
+他輸入1000000，則顯示100
+“input” / 10000 = {{treatmentCostInTenThousand}}
+
+長照費用需求
+=1~6級扶助金(疾病) 1~6級扶助金(意外) 1~11級一次金(疾病)及1~11級一次金(意外)
+如果遭遇長照風險，您覺得每個月需要多少費用？
+1~6級扶助金(疾病)、1~6級扶助金(意外)
+（例如他輸入50000元，則這兩項都顯示5，因為單位是萬）
+{{longtermcare1to6accident}} = {{longtermcare1to6disease}} = “input”/10000
+
+1~11級一次金(疾病)以及1~11級一次金(意外)
+(成人與幼兒版統一邏輯：使用長照費用需求 (slider input) 計算)
+（假設他輸入長照需求為50000元，則這兩項都顯示12.5萬～250萬）
+(邏輯為：長照需求*50*5%~長照需求*50)不要四捨五入
+{{longtermcare1to11accident}} = {{longtermcare1to11disease}} = "{{longTermCare}}*50*5%~{{longTermCare}}*50"
+
+個人債務總額＝壽險-身故理賠金
+您目前的個人債務總額（房貸、車貸…等）？ 請輸入債務總額(萬)
+他輸入多少就多少。
+{{personalDebt}} = “input”
+
+
+家人照顧金=意外險-身故理賠金
+面對身故，您期望預留多少錢繼續照顧家人？ 請輸入家人照顧金
+他輸入多少就多少。
+{{familyCare}} = “input”
+
+
+
+
 成人:
 
 提供你需求分析DIY的成人保障規劃pdf模板，以下是邏輯：
@@ -45,9 +107,9 @@
 1~6級扶助金(疾病)、1~6級扶助金(意外)的右邊 
 （例如他輸入50000元，則這兩項都顯示5，因為單位是萬）
 
-1~11級一次金(疾病)以及1~11級一次金(	意外)
-（假設他輸入月薪為50000元，則這兩項都顯示12.5萬～250萬）
-(邏輯為：月薪*50*5%~月薪*50)
+1~11級一次金(疾病)以及1~11級一次金(意外)
+（假設他輸入長照需求為50000元，則這兩項都顯示12.5萬～250萬）
+(邏輯為：長照需求*50*5%~長照需求*50)
 
 11.壽險需求評估-個人債務總額 
 依據他輸入的金額，顯示在pdf第四頁的下方身故理賠金的右邊
@@ -110,28 +172,6 @@
 1~6級扶助金(疾病)、1~6級扶助金(意外)的右邊 
 （例如他輸入50000元，則這兩項都顯示5，因為單位是萬）
 
-1~11級一次金(疾病)以及1~11級一次金(	意外)
-（假設他輸入月薪為50000元，則這兩項都顯示12.5萬～250萬）
-(邏輯為：月薪*50*5%~月薪*50)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+1~11級一次金(疾病)以及1~11級一次金(意外)
+（假設他輸入長照需求為50000元，則這兩項都顯示12.5萬～250萬）
+(邏輯為：長照需求*50*5%~長照需求*50)
